= New Features =

== 1.7 release (in-progress) == #release-1.7

=== Library ===

==== Major changes ====
 * Optimization API rework

==== New classes ====
 * OptimizationSolver
 * OptimizationProblem

==== API changes ====
 * Removed BoundConstrainedAlgorithm class
 * Removed NearestPointAlgorithm class

=== Python module ===

=== Miscellaneous ===
 * Enhanced print of samples

=== Bug fixes ===
 * #798 (Error message misstyping (Gamma distribution))

== 1.6 release (2015-08-14) == #release-1.6

=== Library ===

==== Major changes ====
 * Improved encapsulation of hmat-oss to use H-Matrices in more classes
 * Kriging metamodelling becomes vectorial
 * Conditional normal realizations
 * Polynomial chaos performance improvements (#413)

==== New classes ====
 * VonMises, distribution
 * Frechet, distribution
 * ParametrizedDistribution, to reparametrize a distribution
 * DistributionParameters, ArcsineMuSigma, BetaMuSigma, GumbelAB, GumbelMuSigma, GammaMuSigma, LogNormalMuSigma, LogNormalMuSigmaOverMu, WeibullMuSigma parameters
 * PolygonArray, allows to draw a collection of polygons
 * MarginalDistribution, MaximumDistribution, RatioDistribution, arithmetic distributions
 * KrigingRandomVector
 * ConditionalNormalProcess
 * MetaModelValidation, for the validation of a metamodel

==== API changes ====
 * Added a new draw3D() method based on Euler angles to the Mesh class.
 * Changed the parameter value of the default constructor for the AliMikhailHaqCopula and FarlieGumbelMorgensternCopula classes.
 * Added a new constructor to the ParametricEvaluationImplementation class.
 * Added floor, ceil, round, trunc symbols to analytical function.
 * Allow to save/load simulation algorithms
 * Added the low order G1K3 rule to the GaussKronrodRule class.
 * Added the BitCount() method to the SpecFunc class.
 * Added vectorized versions of the non-uniform random generation methods in the DistFunc class.