@@ -14,6 +14,7 @@
 ==== API changes ====
  * Removed BoundConstrainedAlgorithm class
  * Removed NearestPointAlgorithm class
+ * Deprecated AbdoRackwitz|Cobyla|SQP::[gs]etLevelFunction|[gs]etLevelValue
 
 === Python module ===
 
